# E.V.A

./: .gitignore  .replit  README.md  replit.md
attached_assets/: Pasted-EVA-Evolutionary-Virtual-Android-A-Self-Evolving-Intelligent-System-for-Synthetic-Cognition-and-Em-1759499433064_1759499433067.txt  Pasted-EVA-Evolutionary-Virtual-Android-A-Self-Evolving-Intelligent-System-for-Synthetic-Cognition-and-Em-1759505397222_1759505397226.txt
backend/: requirements.txt
backend/api/: main.py
backend/eva_core/: orchestrator.py  policy_engine.py  training.py
cpp_modules/perception/: Makefile  perception.cpp
frontend/: vite.config.ts
frontend/src/: App.css  App.tsx
proto/: eva_core.proto
rust_modules/policy_engine/: Cargo.toml
rust_modules/policy_engine/src/: lib.rs
