[package]
name = "eva_policy_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "eva_policy_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
chrono = "0.4"
